2005-11-25  David Hampton  <hampton@employees.org>

	* src/gnome/dialog-price-edit-db.c: Enhance the "remove old
	prices" code to have options to retain the last price entered, and
	to retain any user entered prices.  The "remove old" button should
	always be active.  Group the "Add/Edit/Remove" buttons for a
	single price.  Allow the prices dialog to be closed with the
	escape key.

	* src/gnome-utils/gnc-date-edit.c: Show widget by default when its
	created for a glade dialog.

	* src/gnome-utils/gnc-file.c: Shouldn't still be calling the old
	save state functions.

	* src/scm/main-window.scm: Fix crash when saving files.

	* src/report/report-gnome/gnc-plugin-page-report.c:
	* src/business/business-gnome/gnc-plugin-page-invoice.c:
	* src/gnome-utils/gnc-main-window.c:
	* src/gnome/gnc-plugin-page-register.c:
	* src/gnome/gnc-plugin-page-account-tree.c: Update default
	accelerator keys as per the HIG.

2005-11-23  David Hampton  <hampton@employees.org>

	* src/report/report-gnome/report-gnome.scm:
	* src/gnome-utils/gnc-menu-extensions.c:
	* src/gnome-utils/gnc-menu-extensions.h:
	* src/gnome-utils/gnc-plugin-menu-additions.c:
	* src/gnome-utils/gnome-utils.scm:
	* src/gnome-utils/gnc-menu-extensions.scm: Rewrite the code that
	assigns accelerator keys to the names of menu extensions.  The new
	C language implementation is now called as late as possible (when
	menus are populated), and rewritten understands utf8 strings.  The
	code now also translates the menu extension path components as it
	goes so that sub-menus will appear properly in non-English
	languages.

	* src/gnome-utils/ui/gnc-main-window-ui.xml:
	* src/gnome-utils/gnc-main-window.c:
	* src/gnome/top-level.c: Restore long lost functionality to
	customize the accelerator keys on menu items.

	* src/gnome-utils/druid-gconf-setup.c:
	* src/engine/test/test-resolve-file-path.c:
	* src/app-utils/gnc-ui-util.c:
	* lib/libqof/qof/guid.c: Use the g_get_home_dir() function instead